err/zephserver.err
Listing '.'...
Listing './bin'...
Listing './include'...
Listing './lib'...
Listing './lib/python3.5'...
Listing './lib/python3.5/site-packages'...
Listing './lib/python3.5/site-packages/pip'...
Listing './lib/python3.5/site-packages/pip/_vendor'...
Listing './lib/python3.5/site-packages/pip/commands'...
Listing './lib/python3.5/site-packages/pip/compat'...
Listing './lib/python3.5/site-packages/pip/models'...
Listing './lib/python3.5/site-packages/pip/operations'...
Listing './lib/python3.5/site-packages/pip/req'...
Listing './lib/python3.5/site-packages/pip/utils'...
Listing './lib/python3.5/site-packages/pip/vcs'...
Listing './lib/python3.5/site-packages/pip-9.0.1.dist-info'...
Listing './lib/python3.5/site-packages/pkg_resources'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor/packaging'...
Listing './lib/python3.5/site-packages/pkg_resources/extern'...
Listing './lib/python3.5/site-packages/pkg_resources-0.0.0.dist-info'...
Listing './lib/python3.5/site-packages/setuptools'...
Listing './lib/python3.5/site-packages/setuptools/command'...
Listing './lib/python3.5/site-packages/setuptools/extern'...
Listing './lib/python3.5/site-packages/setuptools-32.3.1.dist-info'...
Listing './lib/python3.5/site-packages/tornado'...
Listing './lib/python3.5/site-packages/tornado/platform'...
Listing './lib/python3.5/site-packages/tornado/test'...
Listing './lib/python3.5/site-packages/tornado/test/csv_translations'...
Listing './lib/python3.5/site-packages/tornado/test/gettext_translations'...
Listing './lib/python3.5/site-packages/tornado/test/gettext_translations/fr_FR'...
Listing './lib/python3.5/site-packages/tornado/test/gettext_translations/fr_FR/LC_MESSAGES'...
Listing './lib/python3.5/site-packages/tornado/test/static'...
Listing './lib/python3.5/site-packages/tornado/test/static/dir'...
Listing './lib/python3.5/site-packages/tornado/test/templates'...
Listing './lib/python3.5/site-packages/tornado-4.5.3.egg-info'...
Listing './lib/python3.5/site-packages/zephserver'...
Listing './lib/python3.5/site-packages/zephserver/admin'...
Listing './lib/python3.5/site-packages/zephserver/infra'...
Compiling './lib/python3.5/site-packages/zephserver/infra/cluster_adapter.py'...
***   File "./lib/python3.5/site-packages/zephserver/infra/cluster_adapter.py", line 127
    except Exception, e:
                    ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/zephserver/infra/external_control.py'...
***   File "./lib/python3.5/site-packages/zephserver/infra/external_control.py", line 73
    except Exception, e:
                    ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/zephserver/infra/service_manager.py'...
***   File "./lib/python3.5/site-packages/zephserver/infra/service_manager.py", line 271
    except Exception, e:
                    ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/zephserver/service'...
Compiling './lib/python3.5/site-packages/zephserver/service/django_session_service.py'...
***   File "./lib/python3.5/site-packages/zephserver/service/django_session_service.py", line 122
    except Exception, e:
                    ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/zephserver/service/roomhandler_service.py'...
***   File "./lib/python3.5/site-packages/zephserver/service/roomhandler_service.py", line 225
    except Exception, e:
                    ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/zephserver/service/routeur_service.py'...
***   File "./lib/python3.5/site-packages/zephserver/service/routeur_service.py", line 178
    except Exception, e:
                    ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/zephserver/task'...
Listing './lib/python3.5/site-packages/zephserver/test'...
Compiling './lib/python3.5/site-packages/zephserver/test/setup_tests.py'...
***   File "./lib/python3.5/site-packages/zephserver/test/setup_tests.py", line 25
    print path
             ^
SyntaxError: Missing parentheses in call to 'print'

Compiling './lib/python3.5/site-packages/zephserver/test/test_cluster_controller.py'...
***   File "./lib/python3.5/site-packages/zephserver/test/test_cluster_controller.py", line 24
    print path
             ^
SyntaxError: Missing parentheses in call to 'print'

Compiling './lib/python3.5/site-packages/zephserver/test/test_service_manager.py'...
***   File "./lib/python3.5/site-packages/zephserver/test/test_service_manager.py", line 24
    print path
             ^
SyntaxError: Missing parentheses in call to 'print'

Listing './lib/python3.5/site-packages/zephserver/test/utils'...
Listing './lib/python3.5/site-packages/zephserver/utils'...
Listing './lib/python3.5/site-packages/zephserver/utils/decorator'...
Compiling './lib/python3.5/site-packages/zephserver/utils/decorator/sessiondecorator.py'...
***   File "./lib/python3.5/site-packages/zephserver/utils/decorator/sessiondecorator.py", line 126
    except Exception, e:
                    ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/zephserver/utils/roomhandler'...
Compiling './lib/python3.5/site-packages/zephserver/utils/roomhandler/roomhandler.py'...
***   File "./lib/python3.5/site-packages/zephserver/utils/roomhandler/roomhandler.py", line 212
    except Exception, e:
                    ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/zephserver-0.1.27.egg-info'...
Listing './share'...
Listing './share/python-wheels'...
